remove redundant fields